code/services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - port: 80 # internal cluster port
      nodePort: 30123 # node port
      targetPort: 8080 # container port
  selector:
    app: kubia
